--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,175 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "preview": "desktop",
-    "platform": ["1-1", "1-2", "2-1", "2-2"],
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "prefix": "",
-    "pcRepo": "",
-    "iosRepo": "",
-    "androidRepo": "",
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        },
-        "webview": {
-            "userAgent": "",
-            "javaScriptEnabled": true,
-            "domStorageEnabled": true,
-            "allowFileAccess": true,
-            "loadWithOverviewMode": true,
-            "setSupportZoom": true,
-            "clearCache": true
-        }
-    },
-    "ios": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.xiaoshen.pakeplus.ios",
-        "icon": "./app-icon.png",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.pakeplus.android",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "desktop": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.2",
-        "id": "com.pakeplus.app",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": false,
-        "tauriApi": false,
-        "buildMethod": "local",
-        "debug": false
-    }
-}
+{"message":"Not Found","documentation_url":"https://docs.github.com/rest/git/refs#get-all-references-in-a-namespace","status":"404","name":"cefafdbcfa","url":"https://yp.weiqirelays.com/","showName":"威齐云盘","appid":"com.cefafdbcfa.pakeplus","icon":"","iconPath":"","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"1.0.1","preview":"desktop","platform":["1-1"],"width":800,"height":600,"desc":"","jsFile":[],"filterCss":"","customJs":"// very important, if you don't know what it is, don't touch it\n// 非常重要，不懂代码不要动，这里可以解决80%的问题，也可以生产1000+的bug\nconst hookClick = (e) => {\n    const origin = e.target.closest('a')\n    const isBaseTargetBlank = document.querySelector(\n        'head base[target=\"_blank\"]'\n    )\n    console.log('origin', origin, isBaseTargetBlank)\n    if (\n        (origin && origin.href && origin.target === '_blank') ||\n        (origin && origin.href && isBaseTargetBlank)\n    ) {\n        e.preventDefault()\n        console.log('handle origin', origin)\n        location.href = origin.href\n    } else {\n        console.log('not handle origin', origin)\n    }\n}\n\nwindow.open = function (url, target, features) {\n    console.log('open', url, target, features)\n    location.href = url\n}\n\ndocument.addEventListener('click', hookClick, { capture: true })\n\nconst { invoke } = window.__TAURI__.core\nconst hookClick = (e) => {\n    const origin = e.target.closest('a')\n    const isBaseTargetBlank = document.querySelector(\n        'head base[target=\"_blank\"]'\n    )\n    if (\n        (origin && origin.href && origin.target === '_blank') ||\n        (origin && origin.href && isBaseTargetBlank)\n    ) {\n        e.preventDefault()\n        invoke('open_url', { url: origin.href })\n    }\n}\n\nwindow.open = function (url, target, features) {\n    invoke('open_url', { url: url })\n}\n\ndocument.addEventListener('click', hookClick, { capture: true })\n\nconst { invoke } = window.__TAURI__.core\n\nif ('__TAURI__' in window) {\n    await invoke('download_file', {\n        url: 'https://www.baidu.com/img/flexible/logo/pc/result.png',\n        savePath: 'test.png',\n        fileId: 'test',\n    })\n}\n\nconst { listen } = window.__TAURI__.event\n\nlisten('download_progress', (event: any) => {\n    downloadProgress.value = Number(\n        ((event.payload.downloaded / event.payload.total) * 100).toFixed(2)\n    )\n})\n","isHtml":false,"htmlPath":"","htmlFiles":[],"prefix":"","pcRepo":"PakePlus-v2.1.3","iosRepo":"PakePlus-iOS-v2.1.3","androidRepo":"PakePlus-Android-v2.1.3","more":{"windows":{"label":"cefafdbcfa","title":"威齐云盘","url":"https://yp.weiqirelays.com/","userAgent":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36","width":800,"height":600,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":false,"shadow":true,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false,"backgroundColor":null,"backgroundThrottling":null,"javascriptDisabled":false}},"phone":{"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"cefafdbcfa","showName":"威齐云盘","version":"1.0.1","webUrl":"https://yp.weiqirelays.com/","id":"com.cefafdbcfa.pakeplus.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false,"safeArea":"all"},"android":{"name":"cefafdbcfa","showName":"威齐云盘","version":"1.0.1","webUrl":"https://yp.weiqirelays.com/","id":"com.cefafdbcfa.pakeplus.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false,"safeArea":"all"},"desktop":{"name":"cefafdbcfa","showName":"威齐云盘","version":"1.0.1","id":"com.cefafdbcfa.pakeplus.desktop","desc":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","webUrl":"https://yp.weiqirelays.com/","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"local","debug":false}}
