--- a/scripts/ppconfig.json
+++ b/scripts/ppconfig.json
@@ -1,175 +1,1 @@
-{
-    "name": "",
-    "url": "",
-    "showName": "",
-    "appid": "",
-    "icon": "",
-    "iconRound": true,
-    "state": true,
-    "single": true,
-    "injectJq": true,
-    "tauriApi": false,
-    "devbug": false,
-    "version": "0.0.1",
-    "preview": "desktop",
-    "platform": ["1-1", "1-2", "2-1", "2-2"],
-    "width": 800,
-    "height": 600,
-    "desc": "",
-    "jsFile": [],
-    "filterCss": "",
-    "customJs": "",
-    "isHtml": false,
-    "htmlPath": "",
-    "htmlFiles": [],
-    "prefix": "",
-    "pcRepo": "",
-    "iosRepo": "",
-    "androidRepo": "",
-    "more": {
-        "windows": {
-            "label": "",
-            "title": "",
-            "url": "",
-            "userAgent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36",
-            "width": 800,
-            "height": 600,
-            "theme": null,
-            "resizable": true,
-            "fullscreen": false,
-            "maximized": false,
-            "minWidth": 400,
-            "minHeight": 300,
-            "maxWidth": 1920,
-            "maxHeight": 1080,
-            "decorations": true,
-            "transparent": false,
-            "titleBarStyle": "Visible",
-            "visible": true,
-            "focus": true,
-            "closable": true,
-            "minimizable": true,
-            "maximizable": true,
-            "alwaysOnTop": false,
-            "alwaysOnBottom": false,
-            "center": false,
-            "skipTaskbar": false,
-            "tabbingIdentifier": null,
-            "parent": null,
-            "dragDropEnabled": true,
-            "browserExtensionsEnabled": false,
-            "devtools": true,
-            "contentProtected": false,
-            "hiddenTitle": false,
-            "incognito": false,
-            "proxyUrl": null,
-            "useHttpsScheme": false,
-            "zoomHotkeysEnabled": false,
-            "acceptFirstMouse": false,
-            "create": false
-        }
-    },
-    "phone": {
-        "safeArea": {
-            "top": 0,
-            "bottom": 0,
-            "left": 0,
-            "right": 0
-        },
-        "header": {
-            "show": false,
-            "title": "",
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "loading": false,
-            "toolBar": false,
-            "toolBarBackgroundColor": "",
-            "toolBarColor": "",
-            "toolBarFontSize": 16,
-            "toolBarFontWeight": "bold"
-        },
-        "siderMenu": {
-            "show": false,
-            "width": 0,
-            "backgroundColor": "",
-            "color": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "title": "",
-            "titleColor": "",
-            "titleFontSize": 16,
-            "titleFontWeight": "bold"
-        },
-        "tabBar": {
-            "show": false,
-            "backgroundColor": "",
-            "color": "",
-            "activeColor": "",
-            "fontSize": 16,
-            "fontWeight": "bold",
-            "tabBarItem": []
-        },
-        "webview": {
-            "userAgent": "",
-            "javaScriptEnabled": true,
-            "domStorageEnabled": true,
-            "allowFileAccess": true,
-            "loadWithOverviewMode": true,
-            "setSupportZoom": true,
-            "clearCache": true
-        }
-    },
-    "ios": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.xiaoshen.pakeplus.ios",
-        "icon": "./app-icon.png",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "android": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.1",
-        "webUrl": "https://juejin.cn/",
-        "id": "com.pakeplus.android",
-        "icon": "./app-icon.png",
-        "input": "./app-icon.png",
-        "output": "./res",
-        "rounded": true,
-        "copyTo": "./app/src/main/res",
-        "androidResDir": "./app/src/main/res",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）",
-        "isHtml": false,
-        "debug": false,
-        "safeArea": "all"
-    },
-    "desktop": {
-        "name": "PakePlus",
-        "showName": "PakePlus",
-        "version": "0.0.2",
-        "id": "com.pakeplus.app",
-        "desc": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "webUrl": "https://juejin.cn/",
-        "iconPath": "../app-icon.png",
-        "inputPath": "../app-icon.png",
-        "tempPath": "./processed-image.png",
-        "icnsPath": "../src-tauri/icons/icon.icns",
-        "pubBody": "Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途，否则后果自负）",
-        "isHtml": false,
-        "single": true,
-        "state": true,
-        "injectJq": false,
-        "tauriApi": false,
-        "buildMethod": "local",
-        "debug": false
-    }
-}
+{"message":"Not Found","documentation_url":"https://docs.github.com/rest/git/refs#get-all-references-in-a-namespace","status":"404","name":"ababccdaeab","url":"https://yp.weiqirelays.com/","showName":"威齐云盘","appid":"com.ababccdaeab.weiqirelays","icon":"","iconPath":"","iconRound":true,"state":true,"single":true,"injectJq":true,"tauriApi":false,"devbug":false,"version":"2.0.0","preview":"desktop","platform":["1-1"],"width":800,"height":600,"desc":"","jsFile":[],"filterCss":"","customJs":"// very important, if you don't know what it is, don't touch it\n// 非常重要，不懂代码不要动，这里可以解决80%的问题，也可以生产1000+的bug\n// --- 修改后的 PakePlus 注入脚本 ---\n\nconst hookClick = (e) => {\n    const origin = e.target.closest('a')\n    \n    // 1. 如果没有链接，直接忽略\n    if (!origin || !origin.href) return;\n\n    // 【核心修改点 A】\n    // 原代码在这里拦截了 _blank 并强制在 App 内打开，导致无法下载。\n    // 修改为：如果是 target=\"_blank\"，直接 return，不做任何拦截！\n    // 这样 PakePlus 底层就会接管它，并调用手机系统浏览器打开（从而触发下载）。\n    if (origin.target === '_blank') {\n        console.log('检测到外部链接/下载请求，放行给系统浏览器:', origin.href);\n        return; \n    }\n\n    const isBaseTargetBlank = document.querySelector('head base[target=\"_blank\"]')\n    \n    // 2. 只有当确实需要拦截时（比如非 _blank 的普通跳转），才执行原来的逻辑\n    // 这里保留原逻辑的结构，防止破坏单页应用(SPA)的路由\n    if (isBaseTargetBlank) {\n        e.preventDefault()\n        console.log('handle origin', origin)\n        location.href = origin.href\n    }\n}\n\n// 【核心修改点 B】\n// 重写 window.open。\n// 既然你要“直接下载”，我们就不做文件后缀判断了。\n// 任何调用 window.open 的行为，都视为“要在外部浏览器打开”。\nwindow.open = function (url, target, features) {\n    console.log('window.open 被调用，强制转换为系统浏览器下载:', url);\n    \n    // 创建一个临时的 a 标签\n    const a = document.createElement('a');\n    a.href = url;\n    a.target = '_blank'; // 设置为 _blank，配合上面的 hookClick 放行逻辑\n    \n    document.body.appendChild(a);\n    a.click(); // 模拟点击，触发系统浏览器\n    \n    // 延时清理\n    setTimeout(() => {\n        document.body.removeChild(a);\n    }, 100);\n}\n\n// 注册监听器\ndocument.addEventListener('click', hookClick, { capture: true })\n\nwindow.open = function (url, target, features) {\n    console.log('open', url, target, features)\n    location.href = url\n}\n\ndocument.addEventListener('click', hookClick, { capture: true })\n\n\n","isHtml":false,"htmlPath":"","htmlFiles":[],"prefix":"","pcRepo":"PakePlus-v2.1.3","iosRepo":"PakePlus-iOS-v2.1.3","androidRepo":"PakePlus-Android-v2.1.3","more":{"windows":{"label":"ababccdaeab","title":"威齐云盘","url":"https://yp.weiqirelays.com/","userAgent":"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36","width":800,"height":600,"theme":null,"resizable":true,"fullscreen":false,"maximized":false,"minWidth":400,"minHeight":300,"maxWidth":1920,"maxHeight":1080,"decorations":true,"transparent":false,"titleBarStyle":"Visible","visible":true,"focus":true,"closable":true,"minimizable":true,"maximizable":true,"alwaysOnTop":false,"alwaysOnBottom":false,"center":false,"shadow":true,"skipTaskbar":false,"tabbingIdentifier":null,"parent":null,"dragDropEnabled":true,"browserExtensionsEnabled":false,"devtools":true,"contentProtected":false,"hiddenTitle":false,"incognito":false,"proxyUrl":null,"useHttpsScheme":false,"zoomHotkeysEnabled":false,"acceptFirstMouse":false,"create":false,"backgroundColor":null,"backgroundThrottling":null,"javascriptDisabled":false}},"phone":{"safeArea":{"top":0,"bottom":0,"left":0,"right":0},"header":{"show":false,"title":"","backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","loading":false,"toolBar":false,"toolBarBackgroundColor":"","toolBarColor":"","toolBarFontSize":16,"toolBarFontWeight":"bold"},"siderMenu":{"show":false,"width":0,"backgroundColor":"","color":"","fontSize":16,"fontWeight":"bold","title":"","titleColor":"","titleFontSize":16,"titleFontWeight":"bold"},"tabBar":{"show":false,"backgroundColor":"","color":"","activeColor":"","fontSize":16,"fontWeight":"bold","tabBarItem":[]},"webview":{"userAgent":"","javaScriptEnabled":true,"domStorageEnabled":true,"allowFileAccess":true,"loadWithOverviewMode":true,"setSupportZoom":true,"clearCache":true}},"ios":{"name":"ababccdaeab","showName":"威齐云盘","version":"2.0.0","webUrl":"https://yp.weiqirelays.com/","id":"com.ababccdaeab.weiqirelays.ios","icon":"./app-icon.png","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false,"safeArea":"all"},"android":{"name":"ababccdaeab","showName":"威齐云盘","version":"2.0.0","webUrl":"https://yp.weiqirelays.com/","id":"com.ababccdaeab.weiqirelays.android","icon":"./app-icon.png","input":"./app-icon.png","output":"./res","rounded":true,"copyTo":"./app/src/main/res","androidResDir":"./app/src/main/res","desc":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","pubBody":"Package for personal use only, please do not use for commercial purposes（打包仅限个人使用，请勿传播或商业用途）","isHtml":false,"debug":false,"safeArea":"all"},"desktop":{"name":"ababccdaeab","showName":"威齐云盘","version":"2.0.0","id":"com.ababccdaeab.weiqirelays.desktop","desc":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","webUrl":"https://yp.weiqirelays.com/","iconPath":"../app-icon.png","inputPath":"../app-icon.png","tempPath":"./processed-image.png","icnsPath":"../src-tauri/icons/icon.icns","pubBody":"打包仅限个人使用，请勿传播或商业用途，否则后果自负","isHtml":false,"single":true,"state":true,"injectJq":false,"tauriApi":false,"buildMethod":"local","debug":false}}
